# guacamole-with-cuda

./: Makefile  README-kalman-filter-debug.md  README-kalman-filter-fix.md  README-push-instructions.md  README.md  check-kalman-middleware.sh  kalman-filter-activation-fix.sh  kalman-middleware-debug.sh  kalman-middleware.c  kalman-proxy-debug.sh  kalman-proxy-fix.sh  kalman-proxy-hook.c  kalman-proxy-sample.conf  kalman-proxy-start.sh  kalman-proxy.conf  kalman-proxy.conf.sample  kalman_filter.cu  kalman_filter.h  push-to-github.sh
guacamole-server-1.5.5/: README-lanczos-audio.md  configure.ac
guacamole-server-1.5.5/src/guacenc/: Makefile.am  video.c  video.h  video_filter.cu  video_filter.h
guacamole-server-1.5.5/src/libguac/: Makefile.am  kalman_filter.cu  kalman_filter.h  video_filter.cu  video_filter.h
guacamole-server-1.5.5/src/pulse/: lanczos_audio_resampler.c  pulse_lanczos_integration.c  pulse_lanczos_integration.h
guacamole-server-1.5.5/src/pulse/pulse/: lanczos_audio_resampler.h
